# oss.twtr

./: .gitignore  OSS.Twtr.sln  README.md
OSS.Twtr.Api/: DependenciesInjection.cs  OSS.Twtr.Api.csproj  Program.cs  appsettings.json  load.js
OSS.Twtr.App/: OSS.Twtr.App.csproj  TweetFeature.cs
OSS.Twtr.Application/: DependenciesInjection.cs  IDataDbContext.cs  IQuery.cs  IUnitOfWork.cs  OSS.Twtr.Application.csproj  ValidationBehavior.cs
OSS.Twtr.Core/: Either.cs  Result.cs
OSS.Twtr.DataManagement/: DataDependenciesInjection.cs  OSS.Twtr.DataManagement.csproj  OSS.Twtr.DataManagement.csproj.DotSettings
OSS.Twtr.Domain/: DomainEvent.cs  Either.cs  Entity.cs  Error.cs  IEventDispatcher.cs  IListSpecification.cs  ISpecification.cs  OSS.Twtr.Domain.csproj.DotSettings  Result.cs  Specification.cs  Tweet.cs  User.cs
OSS.Twtr.Identity/: DbContext.cs  IdentityFeature.cs  OSS.Twtr.Identity.csproj  OSS.Twtr.Identity.csproj.DotSettings
OSS.Twtr.Identity.Tests/: CreateAccountShould.cs  OSS.Twtr.Identity.Tests.csproj
OSS.Twtr.IdentityManagement/: IdentityDependenciesInjection.cs  OSS.Twtr.IdentityManagement.csproj
OSS.Twtr.Infrastructure/: EventDispatcher.cs  InfrastructureDependenciesInjection.cs  OSS.Twtr.Infrastructure.csproj  OSS.Twtr.Infrastructure.csproj.DotSettings  Repository.cs  UnitOfWork.cs
OSS.Twtr.Integration.Tests/: CreateAccountShould.cs  OSS.Twtr.Integration.Tests.csproj
rust/: .env  Cargo.toml
rust/migrations/2022-12-02-202312_create_accounts/: up.sql
rust/src/: auth.rs  login_user.rs  models.rs  register_user.rs  schema.rs
(+542 files in other folders)
